--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
-  <link href="{{ 'assets/css/style.css' | relative_url }}" rel="stylesheet">
+  <link href="{{ '/assets/css/styles.css' | relative_url }}" rel="stylesheet">
   {% feed_meta %}
   {% seo %}
 </head>
 <body>
-  {% include navigation.html %}
+  {% include header.html %}
   {{ content }}
+  {% include footer.html %}
 </body>
 </html>
