--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,25 @@
 .current {
   text-decoration: none;
 }
+
+.logo {
+  p {
+    display: inline-block;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 1.25px;
+  }
+}
+
+.nav-bar {
+  display: inline-block;
+  a {
+    color: black;
+  }
+}
+
+.copyright {
+  p {
+    text-align: center;
+  }
+}
